chor(optimize): set maven opts for performance build, related to #OPT-1101