@@ -30,6 +30,7 @@ pipeline {
   environment {
     DISPLAY = ":0"
     NODE_ENV = "ci"
+    MAVEN_OPTS = "-Xmx2048m -Xms512m -XX:PermSize=256m -XX:MaxPermSize=1024m"
   }
 
   options {
